styles/globals.css
body {
  margin: 0;
}

main {
  background-color: #F3F2F7;
  width: 100vw;
  min-height: 100dvh;
  display: flex;
  justify-content: center;
  align-items: center;
  font-family: -apple-system, BlinkMacSystemFont, 'Roboto', sans-serif;
}

h1 {
  margin: 0;
}
h3 {
  margin: 0;
  font-weight: 500;
}
p {
  margin: 0;
}

select {
  border: 0;
  background-color: #F3F2F7;
  color: #89888E;
  padding: 4px;
  border-radius: 6px;
  margin: 0 6px;
  font-weight: 500;

  -webkit-appearance: none;
  -moz-appearance: none;
  cursor: pointer;
}

@media (prefers-color-scheme: dark) {
  main {
    background-color: #000000;
    color: #ffffff;
  }

  select {
    background-color: #2C2B2D;
    color: #908F94;
  }
}

